# event-driven-rag-pipeline

./: .env.example  .gitignore  BUGFIX_SUMMARY.md  CLAUDE.md  CONTEXT.md  Dockerfile  Readme.md  TESTS.md  conftest.py  docker-compose.yml  plan.md  pyproject.toml  test.docker-compose.yml  todo.md
.claude/: settings.local.json
.claude/commands/: get-docstrings.md
.claude/scripts/: get-docstrings.ps1
config/: loki.yaml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
config/alloy/: config.alloy
config/grafana/dashboards/: embeddings-overview.json  posts-overview.json  rag-pipeline-main.json  rag-pipeline.json
config/grafana/datasources/: datasources.yml  prometheus.yml
docs/: Architecture.md  Glossary.md  Observability.md  Patterns.md  Readme_draft.md  Testing.md
homelab-monitoring/: .env.example
scripts/: generate_test_vectors.py  migrate_sqlite_to_sync.py
src/event_driven_rag_service/: exceptions.py
src/event_driven_rag_service/api/: app.py  maintenance.py  search.py  sync.py  sync_legacy.py  ui.py
src/event_driven_rag_service/config/: consumer_groups.py  embedding_config.py  settings.py
src/event_driven_rag_service/data_models/: chunk.py  post.py
src/event_driven_rag_service/dispatchers/: __init__.py  chunk_dispatcher.py  embedding_dispatcher.py  post_dispatcher.py  search_dispatcher.py
tests/: conftest.py
tests/e2e/: conftest.py  test_event_bus_health.py  test_ingest_pipeline.py  test_postgres_health.py  test_search_pipeline.py  test_search_similar.py  test_sync_api.py  test_task_queue_health.py
tests/integration/: conftest.py  test_chunk_repository.py  test_dispatcher_pipeline.py  test_gpu_worker.py  test_post_dispatcher.py  test_post_repository.py  test_post_repository_fetch.py  test_postgres_event_bus.py  test_remote_embedding_live.py  test_remote_embedding_pipeline.py  test_search_job_repository.py  test_search_similar.py  test_sync_integration.py  test_ui_integration.py
tests/unit/: conftest.py  test_boundary_chunker.py  test_chunk_dispatcher.py  test_chunk_handler.py  test_chunk_repository.py  test_chunk_table_parser.py  test_cpu_worker.py  test_dev_environment.py  test_embed_handler.py  test_gpu_entrypoint_remote.py  test_gpu_worker_priority.py  test_observability.py  test_post_dispatcher.py  test_post_events.py  test_post_model.py  test_post_repository.py  test_remote_embedding.py  test_requeue_service.py  test_search_dispatcher.py  test_search_handler.py  test_task_registry.py  test_topology_config.py  test_trace_propagation.py
tests/unit/api/: test_ui.py  (+4 more)
tests/utils/: factories.py
(+54 files in other folders)
