[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "event-driven-rag-pipeline"
version = "0.1.0"
description = "Event-driven sync → chunk → embed RAG pipeline"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",

    # Data models
    "pydantic>=2.7",

    # Async database
    "asyncpg>=0.29",
    "pgvector>=0.3",         # pgvector Python client (for vector type support in asyncpg)

    # Message queue
    "aio-pika>=9.4",   # dispatchers (async event-log consumers publishing to RabbitMQ)
    "pika>=1.3",        # workers (sync RabbitMQ consumers)

    # Event log (production)
    "aiokafka>=0.10",

    # Embeddings (GPU worker)
    "sentence-transformers>=3.0",
    "torch>=2.2",

    # Utilities
    "python-dotenv>=1.0",

    # Observability — always installed, exporters only activate when OTEL_ENABLED=true
    # API package: zero-overhead no-op tracer/meter when SDK is not configured
    "opentelemetry-api>=1.24",
    # SDK package: real TracerProvider, BatchSpanProcessor, resource detection
    "opentelemetry-sdk>=1.24",
    # OTLP gRPC exporter: sends spans/metrics to an OTel Collector (or Jaeger direct)
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    # Structured logging: replaces stdlib logging.basicConfig across all services
    # Produces JSON when OTEL_ENABLED=true, human-readable console when false
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",           # async test client for FastAPI
    "testcontainers[postgres,rabbitmq]>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "integration: tests that require a real Postgres container (use testcontainers)",
    "e2e: tests that require the full Docker Compose stack running",
]
# Run unit tests only by default: pytest
# Run integration: pytest -m integration
# Run all:         pytest -m 'not e2e'
addopts = "-ra --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/event_driven_rag_service"]

[tool.hatch.metadata]
# Make the package importable as `event_driven_rag_service` (not `src.event_driven_rag_service`)
# by pointing the root package at the src/ layout.
